turtle aligning, footer, correct redirecting

--- a/templates/default/css/demo.css
+++ b/templates/default/css/demo.css
@@ -35,7 +35,7 @@ strong {
 }
 
 header {
- height: 175px;
+ height: 90px;
 }
 
 header h1, header h2 { display: none; }
